fixed the body tag overflow issue

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   overflow: auto;
 }
@@ -43,6 +43,7 @@ body {
 
 img {
   width: 100%;
+  height: 100%;
   display: block;
 }
 
@@ -55,7 +56,7 @@ img {
   gap: 1.8em;
   margin: 1.5em;
   border-radius: 0.5em;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .container {
